# BobCBA

./: .gitignore  .gitmodules  BobCBA.cpp  BobChatBotApp.cpp  BobChatBotApp.hpp  CMakeLists.txt  IApp.hpp  IModule.hpp  LLaMaModule.cpp  LLaMaModule.hpp  README.md  Utils.hpp  main.cpp  options.cmake
